k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: photoprism-service
  labels:
    app: photoprism
spec:
  type: NodePort
  selector:
    app: photoprism
  ports:
  - port: 2342
    targetPort: 2342
    nodePort: 31861
