k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoprism-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "${TF_ALB_ACM_CERT_ARN}"
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - host: 5585in.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: photoprism-service
            port:
              number: 2342
